--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
-    "native-base": "^3.3.2",
+    "native-base": "^3.3.4",
     "react": "17.0.2",
     "react-hook-form": "^7.24.0",
     "react-native": "0.66.4",
