--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        // needed for react native device info
+        firebaseIidVersion = "19.0.1" // default: "19.0.1"
         buildToolsVersion = "30.0.2"
         minSdkVersion = 21
         compileSdkVersion = 30
