--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
+    "@hookform/resolvers": "^2.8.8",
     "@react-navigation/native": "^6.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
+    "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "native-base": "^3.3.4",
     "react": "17.0.2",
-    "react-hook-form": "^7.24.0",
+    "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "tinycolor2": "^1.4.2"
+    "tinycolor2": "^1.4.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
