--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.5.9",
     "@hookform/resolvers": "^2.8.8",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
@@ -23,6 +24,7 @@
     "react-native": "0.66.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "tinycolor2": "^1.4.2",
