--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,9 @@
     "paths": {
       "@components/*": ["./components/*"],
       "@theme/*": ["./theme/*"],
-      "@screens/*": ["./screens/*"]
+      "@screens/*": ["./screens/*"],
+      "@navigation/*": ["./navigation/*"],
+      "@hooks/*": ["./hooks/"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
