setting up rxdatabase

--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "base-64": "^1.0.0",
+    "events": "^3.3.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "native-base": "^3.3.4",
+    "pouchdb-adapter-react-native-sqlite": "^3.0.1",
     "react": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.12.0",
+    "react-native-sqlite-2": "^3.5.2",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "rxdb": "^11.6.0",
     "tinycolor2": "^1.4.2",
     "yup": "^0.32.11"
   },
