--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,8 @@
       "@theme/*": ["./theme/*"],
       "@screens/*": ["./screens/*"],
       "@navigation/*": ["./navigation/*"],
-      "@hooks/*": ["./hooks/"]
+      "@hooks/*": ["./hooks/*"],
+      "@core/*": ["./core/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
