--- a/package.json
+++ b/package.json
@@ -12,19 +12,28 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.9",
+    "@craftzdog/pouchdb-binary-utils-react-native": "^7.2.4",
+    "@craftzdog/pouchdb-core-react-native": "^7.2.2",
     "@hookform/resolvers": "^2.8.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "base-64": "^1.0.0",
+    "dayjs": "^1.11.0",
     "events": "^3.3.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "native-base": "^3.3.4",
+    "pouchdb-adapter-http": "^7.2.2",
     "pouchdb-adapter-react-native-sqlite": "^3.0.1",
+    "pouchdb-mapreduce": "^7.2.2",
+    "pouchdb-replication": "^7.2.2",
     "react": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-pouchdb-md5": "^7.3.0",
+    "react-native-quick-md5": "^3.0.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.12.0",
@@ -32,7 +41,9 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "rxdb": "^11.6.0",
+    "rxjs": "^7.5.5",
     "tinycolor2": "^1.4.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -41,10 +52,12 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.178",
+    "@types/pouchdb-adapter-http": "^6.1.3",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@types/tinycolor2": "^1.4.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
