--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-pager-view": "^5.4.15",
     "react-native-pouchdb-md5": "^7.3.0",
     "react-native-quick-md5": "^3.0.3",
     "react-native-responsive-screen": "^1.4.2",
@@ -39,6 +40,7 @@
     "react-native-screens": "^3.12.0",
     "react-native-sqlite-2": "^3.5.2",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "rxdb": "^11.6.0",
     "rxjs": "^7.5.5",
