--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,8 @@
       "@screens/*": ["./screens/*"],
       "@navigation/*": ["./navigation/*"],
       "@hooks/*": ["./hooks/*"],
-      "@core/*": ["./core/*"]
+      "@core/*": ["./core/*"],
+      "@utils/*": ["./utils/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
