--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "base-64": "^1.0.0",
     "dayjs": "^1.11.0",
+    "deep-equal": "^2.0.5",
     "events": "^3.3.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
@@ -53,6 +54,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.178",
     "@types/pouchdb-adapter-http": "^6.1.3",
