--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.15",
     "react-native-pouchdb-md5": "^7.3.0",
     "react-native-quick-md5": "^3.0.3",
