--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "react": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-native": "0.66.4",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-get-random-values": "^1.7.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.15",
     "react-native-pouchdb-md5": "^7.3.0",
     "react-native-quick-md5": "^3.0.3",
+    "react-native-reanimated": "^2.7.0",
+    "react-native-reanimated-carousel": "^2.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.12.0",
