--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@craftzdog/pouchdb-binary-utils-react-native": "^7.2.4",
     "@craftzdog/pouchdb-core-react-native": "^7.2.2",
     "@hookform/resolvers": "^2.8.8",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/slider": "^4.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.5.0",
