--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "adb:reverse": "adb reverse tcp:8081 tcp:8081",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 12\"",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
