--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/slider": "^4.2.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
